--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Agrgar las etiquetas metas -->
+    <meta name="description" content="Practicando DOM haciendo un temporizador">
+    <meta name="keywords" content="web,DOM JS,temporizador, practica de DOM">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Formulario</title>
@@ -30,7 +31,7 @@
                             <!-- la etiqueta label siempre lleva clase form-label -->
                             <label class="form-label">Nombre y Apellido</label>
                             <!-- la etiqueta input lleva la clase form-control -->
-                            <input type="text" class="form-control" id="nombre" placeholder="Juan Perez">
+                            <input type="text" class="form-control" id="nombre" placeholder="Juan Perez" onblur="campoRequerido(this)">
                             <!-- validacion de datos se usa la clase is-valid ó ininvalid en input (pone tilde)
                              y valid-feedback ó invalid-feedback en un div da mensaje de ok-->
                             <div class="invalid-feedback">
@@ -42,36 +43,36 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="juanperez@gmail.com">
-                            <div class="invalid-feedback">
+                            <input type="email" class="form-control" id="email" placeholder="juanperez@gmail.com" onblur="validarEmail(this)">
+                            <div class=" invalid-feedback ">
                                 Debe ingresar un email válido
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <label class="form-label">Teléfono</label>
-                            <input type="number" class="form-control" id="telefono" placeholder="3812022522">
+                        <div class="mb-3 ">
+                            <label class="form-label ">Teléfono</label>
+                            <input type="number" class="form-control " id="telefono " placeholder="3812022522 " onblur="validarNumeros(this)">
                             <div class="invalid-feedback">
                                 Debe ingresar un número de teléfono
                             </div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Consulta</label>
-                            <textarea id="consulta" class="form-control" placeholder="ingrese su consulta"></textarea>
-                            <div class="invalid-feedback">
+                            <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="campoRequerido(this)"></textarea>
+                            <div class=" invalid-feedback ">
                                 Debe ingresar una consulta de al menos 10 caracteres
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <div class="form-check">
-                                <input type="checkbox" id="terminos" class="form-check-input">
-                                <label class="form-check-label">Esta de acuerdo con los términos y condiciones</label>
-                                <div class="invalid-feedback">
+                        <div class="mb-3 ">
+                            <div class="form-check ">
+                                <input type="checkbox " id="terminos " class="form-check-input ">
+                                <label class="form-check-label ">Esta de acuerdo con los términos y condiciones</label>
+                                <div class="invalid-feedback ">
                                     Debe aceptar los términos y condiciones
                                 </div>
                             </div>
                         </div>
                         <!-- El boton de enviar debe estar dentro del formulario -->
-                        <button class="btn btn-primary" type="submit">Enviar</button>
+                        <button class="btn btn-primary " type="submit ">Enviar</button>
                     </form>
                 </div>
             </section>
@@ -79,10 +80,13 @@
         </main>
     </header>
     <footer>
+        <div>
+
+        </div>
 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW " crossorigin="anonymous "></script>
+    <script src="js/app.js "></script>
 </body>
 
 </html>
