--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Formulario</title>
+
+    <!-- email js -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_c7em18P7GVybck6CnN0jx");
+        })();
+    </script>
+    <!-- -------- -->
 </head>
 
 <body>
@@ -19,66 +28,66 @@
                 <span class="navbar-brand">Validación JS</span>
             </div>
         </nav>
-        <main class="container">
-            <section class="card my-5 border-dark">
-                <!-- formulario con forma de card -->
-                <div class="card-header bg-dark text-light">
-                    <h5>Formulario de suscripción</h5>
-                </div>
-                <div class="card-body">
-                    <form>
-                        <div class="mb-3">
-                            <!-- la etiqueta label siempre lleva clase form-label -->
-                            <label class="form-label">Nombre y Apellido</label>
-                            <!-- la etiqueta input lleva la clase form-control -->
-                            <input type="text" class="form-control" id="nombre" placeholder="Juan Perez" onblur="campoRequerido(this)">
-                            <!-- validacion de datos se usa la clase is-valid ó ininvalid en input (pone tilde)
-                             y valid-feedback ó invalid-feedback en un div da mensaje de ok-->
-                            <div class="invalid-feedback">
-                                Debe ingresar un nombre y apellido
-                            </div>
-                            <div class="valid-feedback">
-                                Ingresaste correctamente
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="juanperez@gmail.com" onblur="validarEmail(this)">
-                            <div class=" invalid-feedback ">
-                                Debe ingresar un email válido
-                            </div>
-                        </div>
-                        <div class="mb-3 ">
-                            <label class="form-label ">Teléfono</label>
-                            <input type="number" class="form-control " id="telefono " placeholder="3812022522 " onblur="validarNumeros(this)">
-                            <div class="invalid-feedback">
-                                Debe ingresar un número de teléfono
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Consulta</label>
-                            <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="campoRequerido(this)"></textarea>
-                            <div class=" invalid-feedback ">
-                                Debe ingresar una consulta de al menos 10 caracteres
-                            </div>
-                        </div>
-                        <div class="mb-3 ">
-                            <div class="form-check ">
-                                <input type="checkbox " id="terminos " class="form-check-input ">
-                                <label class="form-check-label ">Esta de acuerdo con los términos y condiciones</label>
-                                <div class="invalid-feedback ">
-                                    Debe aceptar los términos y condiciones
-                                </div>
-                            </div>
-                        </div>
-                        <!-- El boton de enviar debe estar dentro del formulario -->
-                        <button class="btn btn-primary " type="submit ">Enviar</button>
-                    </form>
-                </div>
-            </section>
-
-        </main>
     </header>
+    <main class="container">
+        <section class="card my-5 border-dark">
+            <!-- formulario con forma de card -->
+            <div class="card-header bg-dark text-light">
+                <h5>Formulario de suscripción</h5>
+            </div>
+            <div class="card-body">
+                <!-- cuando presiona boton submit valida todos los campos antes de enviarlo -->
+                <form onsubmit="validarGeneral(event)">
+                    <div class="mb-3">
+                        <!-- la etiqueta label siempre lleva clase form-label -->
+                        <label class="form-label">Nombre y Apellido *</label>
+                        <!-- la etiqueta input lleva la clase form-control -->
+                        <input type="text" class="form-control" id="nombre" placeholder="Juan Perez" onblur="campoRequerido(this)">
+                        <!-- validacion de datos se usa la clase is-valid ó ininvalid en input (pone tilde)
+                        y valid-feedback ó invalid-feedback en un div da mensaje de ok-->
+                        <div class="invalid-feedback">
+                            Debe ingresar un nombre y apellido
+                        </div>
+                        <div class="valid-feedback">
+                            Ingresaste correctamente
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="juanperez@gmail.com" onblur="validarEmail(this)">
+                        <div class=" invalid-feedback ">
+                            Debe ingresar un email válido
+                        </div>
+                    </div>
+                    <div class="mb-3 ">
+                        <label class="form-label ">Teléfono</label>
+                        <input type="number" class="form-control " id="telefono" placeholder="3812022522 " onblur="validarNumeros(this)">
+                        <div class="invalid-feedback">
+                            Debe ingresar un número de teléfono
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Consulta</label>
+                        <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="validarConsulta(this)"></textarea>
+                        <div class=" invalid-feedback ">
+                            Debe ingresar una consulta de al menos 10 caracteres
+                        </div>
+                    </div>
+                    <div class="mb-3 ">
+                        <div class="form-check ">
+                            <input type="checkbox" id="terminos" class="form-check-input">
+                            <label class="form-check-label ">Esta de acuerdo con los términos y condiciones</label>
+                            <div class="invalid-feedback">
+                                Debe aceptar los términos y condiciones
+                            </div>
+                        </div>
+                    </div>
+                    <!-- El boton de enviar debe estar dentro del formulario -->
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </form>
+            </div>
+        </section>
+    </main>
     <footer>
         <div>
 
