--- a/index.html
+++ b/index.html
@@ -30,52 +30,52 @@
         </nav>
     </header>
     <main class="container">
-        <section class="card my-5 border-dark">
+        <section class="card my-3 border-dark">
             <!-- formulario con forma de card -->
-            <div class="card-header bg-dark text-light">
+            <div class="card-header bg-secondary text-light">
                 <h5>Formulario de suscripción</h5>
             </div>
             <div class="card-body">
-                <!-- cuando presiona boton submit valida todos los campos antes de enviarlo -->
-                <form onsubmit="validarGeneral(event)">
+                <!-- importante!!!! cuando presiona boton submit valida todos los campos antes de enviarlo -->
+                <form onsubmit="validarGeneral(event)" id="formSuscripcion">
                     <div class="mb-3">
                         <!-- la etiqueta label siempre lleva clase form-label -->
                         <label class="form-label">Nombre y Apellido *</label>
                         <!-- la etiqueta input lleva la clase form-control -->
-                        <input type="text" class="form-control" id="nombre" placeholder="Juan Perez" onblur="campoRequerido(this)">
+                        <input type="text" class="form-control" id="nombre" placeholder="Juan Perez" onblur="campoRequerido(this)" required>
                         <!-- validacion de datos se usa la clase is-valid ó ininvalid en input (pone tilde)
                         y valid-feedback ó invalid-feedback en un div da mensaje de ok-->
                         <div class="invalid-feedback">
                             Debe ingresar un nombre y apellido
                         </div>
-                        <div class="valid-feedback">
+                        <!-- <div class="valid-feedback">
                             Ingresaste correctamente
-                        </div>
+                        </div> -->
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="juanperez@gmail.com" onblur="validarEmail(this)">
+                        <label class="form-label">Email *</label>
+                        <input type="email" class="form-control" id="email" placeholder="juanperez@gmail.com" onblur="validarEmail(this)" required>
                         <div class=" invalid-feedback ">
                             Debe ingresar un email válido
                         </div>
                     </div>
                     <div class="mb-3 ">
-                        <label class="form-label ">Teléfono</label>
-                        <input type="number" class="form-control " id="telefono" placeholder="3812022522 " onblur="validarNumeros(this)">
+                        <label class="form-label ">Teléfono *</label>
+                        <input type="number" class="form-control " id="telefono" placeholder="3812022522 " onblur="validarNumeros(this)" required>
                         <div class="invalid-feedback">
                             Debe ingresar un número de teléfono
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Consulta</label>
-                        <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="validarConsulta(this)"></textarea>
+                        <label class="form-label">Consulta *</label>
+                        <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="validarConsulta(this)" required></textarea>
                         <div class=" invalid-feedback ">
                             Debe ingresar una consulta de al menos 10 caracteres
                         </div>
                     </div>
                     <div class="mb-3 ">
                         <div class="form-check ">
-                            <input type="checkbox" id="terminos" class="form-check-input">
+                            <input type="checkbox" id="terminos" class="form-check-input" required>
                             <label class="form-check-label ">Esta de acuerdo con los términos y condiciones</label>
                             <div class="invalid-feedback">
                                 Debe aceptar los términos y condiciones
@@ -84,18 +84,19 @@
                     </div>
                     <!-- El boton de enviar debe estar dentro del formulario -->
                     <button class="btn btn-primary" type="submit">Enviar</button>
+
+                    <!-- Escribe un alert segun se haya enviado el mail o no, dando opcion de cerrarla -->
+                    <div id="mensaje"></div>
                 </form>
             </div>
         </section>
     </main>
     <footer>
         <div>
-
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW " crossorigin="anonymous "></script>
-    <script src="js/app.js "></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
