corrigo evento onblur de campo textarea

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Consulta *</label>
-                        <textarea id="consulta" class="form-control" placeholder="ingrese su consulta"></textarea>
-                        <!-- <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="validarConsulta(this)" required></textarea> -->
+                        <!-- <textarea id="consulta" class="form-control" placeholder="ingrese su consulta"></textarea> -->
+                        <textarea id="consulta" class="form-control" placeholder="ingrese su consulta" onblur="validarConsulta(this)" required></textarea>
 
                         <div class=" invalid-feedback ">
                             Debe ingresar una consulta de al menos 10 caracteres
